--- a/CSE230-JewelLegend.cabal
+++ b/CSE230-JewelLegend.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.4
-name:               CSE230-Minesweeper
+name:               CSE230-JewelLegend
 version:            0.1.0.0
 
 -- A short (one-line) description of the package.
@@ -23,7 +23,7 @@ extra-source-files:
     CHANGELOG.md
     README.md
 
-executable CSE230-Minesweeper
+executable CSE230-JewelLegend
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
