--- a/CSE230-JewelLegend.cabal
+++ b/CSE230-JewelLegend.cabal
@@ -27,10 +27,11 @@ executable CSE230-JewelLegend
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:    Game
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.14.3.0
+                      , brick
     hs-source-dirs:   app
     default-language: Haskell2010
