--- a/CSE230-JewelLegend.cabal
+++ b/CSE230-JewelLegend.cabal
@@ -33,5 +33,7 @@ executable CSE230-JewelLegend
     -- other-extensions:
     build-depends:    base ^>=4.14.3.0
                       , brick
+                      , cursor
+                      , vty
     hs-source-dirs:   app
     default-language: Haskell2010
