--- a/CSE230-JewelLegend.cabal
+++ b/CSE230-JewelLegend.cabal
@@ -23,17 +23,32 @@ extra-source-files:
     CHANGELOG.md
     README.md
 
+Library
+  ghc-options:        -W
+  exposed-modules:    Game,
+                      Main
+  Default-Extensions: OverloadedStrings
+  build-depends:    base ^>=4.14.3.0
+                      , brick
+                      , cursor
+                      , vty
+                      , random  
+  hs-source-dirs:      app
+  default-language:    Haskell2010
+
 executable CSE230-JewelLegend
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
     other-modules:    Game
-
+    ghc-options:      -threaded 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.14.3.0
                       , brick
                       , cursor
                       , vty
+                      , random  
     hs-source-dirs:   app
     default-language: Haskell2010
+
