--- a/CSE230-JewelLegend.cabal
+++ b/CSE230-JewelLegend.cabal
@@ -23,6 +23,17 @@ extra-source-files:
     CHANGELOG.md
     README.md
 
+library
+  ghc-options:        -W
+  exposed-modules:    Game
+  build-depends:       base ^>=4.14.3.0
+                      , brick
+                      , cursor
+                      , vty
+                      , random
+                      , time
+  hs-source-dirs:      app
+  default-language:    Haskell2010
 
 executable CSE230-JewelLegend
     main-is:          Main.hs
@@ -41,3 +52,14 @@ executable CSE230-JewelLegend
     hs-source-dirs:   app
     default-language: Haskell2010
 
+test-suite test
+  type:             exitcode-stdio-1.0
+  hs-source-dirs:   test
+  main-is:          Test.hs
+  -- other-modules:    
+  build-depends:    base,
+                    QuickCheck,
+                    tasty,
+                    tasty-hunit,
+                    tasty-quickcheck,
+                    CSE230-JewelLegend
